sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/KIVA_Interviews__c.object-meta.xml
<CustomObject>
    <description>Used to gather FLO information for KIVA profiling.</description>
    <label>KIVA Interview</label>
    <nameField>
        <label>KIVA Interviews Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KIVA Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>