sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Able_to_repay_previous_loan_on_time__c.field-meta.xml
<CustomField>
    <fullName>Able_to_repay_previous_loan_on_time__c</fullName>
    <label>Able to repay previous loan on time?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>