sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/About_family__c.field-meta.xml
<CustomField>
    <fullName>About_family__c</fullName>
    <label>About interviewee&#39;s  family</label>
    <type>TextArea</type>
</CustomField>