sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KIVA Interviews</relationshipLabel>
    <relationshipName>KIVA_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>