sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Add_on_FLTs_to_be_in_current_location__c.field-meta.xml
<CustomField>
    <fullName>Add_on_FLTs_to_be_in_current_location__c</fullName>
    <description>Will add-on FLTs be at same location?</description>
    <label>Add on FLTs to be in current location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>