sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Alternative_Income__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Income__c</fullName>
    <description>If interviewee doesn&#39;t own any business, is he/she employed or how does he/she raise income?</description>
    <label>Alternative Income</label>
    <type>TextArea</type>
</CustomField>