sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Average_monthly_income__c.field-meta.xml
<CustomField>
    <fullName>Average_monthly_income__c</fullName>
    <label>Average monthly income from business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 5000 Ksh</fullName>
            </value>
            <value>
                <fullName>5000 - 15000 Ksh</fullName>
            </value>
            <value>
                <fullName>15000 Ksh +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>