sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Community_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Community_Involvement__c</fullName>
    <description>What is the interviewee&#39;s involvement in the community?</description>
    <label>Community Involvement</label>
    <type>TextArea</type>
</CustomField>