sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Date_of_interview__c.field-meta.xml
<CustomField>
    <fullName>Date_of_interview__c</fullName>
    <label>Date of interview</label>
    <required>true</required>
    <type>Date</type>
</CustomField>