sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Do_you_run_any_business__c.field-meta.xml
<CustomField>
    <fullName>Do_you_run_any_business__c</fullName>
    <label>Do you run any business?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>