sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Expansion_plans__c.field-meta.xml
<CustomField>
    <fullName>Expansion_plans__c</fullName>
    <description>Does interviewee plan to buy more FLTs</description>
    <label>Expansion plans</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>