sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/First_FLT_encounter__c.field-meta.xml
<CustomField>
    <fullName>First_FLT_encounter__c</fullName>
    <description>When/How did interviewee first encounter a FLT?</description>
    <label>First FLT encounter</label>
    <type>TextArea</type>
</CustomField>