sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Future_expectations__c.field-meta.xml
<CustomField>
    <fullName>Future_expectations__c</fullName>
    <description>What interviewee hopes to see in future:</description>
    <label>Future expectations:</label>
    <type>TextArea</type>
</CustomField>