sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/good_loan_candidate__c.field-meta.xml
<CustomField>
    <fullName>good_loan_candidate__c</fullName>
    <description>What makes interviewee think he/she is a good loan candidate</description>
    <label>Explain why you&#39;re a good loan candidate</label>
    <type>TextArea</type>
</CustomField>