sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/How_did_you_secure_funding__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_secure_funding__c</fullName>
    <label>How did you secure funding?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Savings</fullName>
            </value>
            <value>
                <fullName>Loan from bank/MFI</fullName>
            </value>
            <value>
                <fullName>Loan from friends/family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>