sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/How_FLO_plans_to_use_profit_earned__c.field-meta.xml
<CustomField>
    <fullName>How_FLO_plans_to_use_profit_earned__c</fullName>
    <label>How FLO plans to use profit earned:</label>
    <type>TextArea</type>
</CustomField>