sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/How_many_FLTs_at_current_location__c.field-meta.xml
<CustomField>
    <fullName>How_many_FLTs_at_current_location__c</fullName>
    <description>Additional FLTs in the current location</description>
    <label>How many FLTs at current location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>