sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/How_many_FLTs_at_new_location__c.field-meta.xml
<CustomField>
    <fullName>How_many_FLTs_at_new_location__c</fullName>
    <label>How many FLTs at new location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>