sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/How_you_market__c.field-meta.xml
<CustomField>
    <fullName>How_you_market__c</fullName>
    <label>How you market to your customers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No need</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
            <value>
                <fullName>Flyers/Signs</fullName>
            </value>
            <value>
                <fullName>Education campaign/door-to-door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>