sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the person conducting the interview</description>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>KIVA Interviews</relationshipLabel>
    <relationshipName>KIVA_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>