sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/KIVA_Interview_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>KIVA_Interview_Auto_Number__c</fullName>
    <description>KIVA Interview autonumber, used as ID on Taroworks</description>
    <displayFormat>KI-{YYYY}{MM}{DD}-{0000}</displayFormat>
    <label>KI Auto Number</label>
    <type>AutoNumber</type>
</CustomField>