sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Loan_Repayment_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repayment_Alternative__c</fullName>
    <description>How will interviewee repay loan if unable to get 50 customers/day?</description>
    <label>Loan Repayment Alternative:</label>
    <type>TextArea</type>
</CustomField>