sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Invitation to training and chance for questions from interviewee</description>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>