sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Surveyor__c.field-meta.xml
<CustomField>
    <fullName>Surveyor__c</fullName>
    <description>Name of the individual carrying out the interview</description>
    <label>Surveyor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>