sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Taken_loan_Before__c.field-meta.xml
<CustomField>
    <fullName>Taken_loan_Before__c</fullName>
    <description>Has interviewee taken another loan before?</description>
    <label>Taken loan Before</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>