sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/What_kind_of_business__c.field-meta.xml
<CustomField>
    <fullName>What_kind_of_business__c</fullName>
    <label>What kind of business?</label>
    <type>TextArea</type>
</CustomField>