sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/where_and_when_will_it_be__c.field-meta.xml
<CustomField>
    <fullName>where_and_when_will_it_be__c</fullName>
    <description>If add on will be in different location, Where? Expected time frame?</description>
    <label>New location, where and when will it be</label>
    <type>TextArea</type>
</CustomField>