sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Where_did_you_grow_up__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_grow_up__c</fullName>
    <description>Where interviewee was brought up</description>
    <label>Where did  you grow up?</label>
    <type>TextArea</type>
</CustomField>