sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Who_will_operate_FLT__c.field-meta.xml
<CustomField>
    <fullName>Who_will_operate_FLT__c</fullName>
    <description>Person to be trained</description>
    <label>Who will operate FLT?</label>
    <type>TextArea</type>
</CustomField>