sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Why_FLT_will_succeed__c.field-meta.xml
<CustomField>
    <fullName>Why_FLT_will_succeed__c</fullName>
    <description>Why interviewee thinks FLT will attract atleast 50 users/day:</description>
    <label>Why FLT will succeed:</label>
    <type>TextArea</type>
</CustomField>