sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/fields/Why_you_want_to_open_a_FLT__c.field-meta.xml
<CustomField>
    <fullName>Why_you_want_to_open_a_FLT__c</fullName>
    <description>Why interviewee wants to open a Fresh Life Toilet</description>
    <label>Why you want to open a FLT:</label>
    <type>TextArea</type>
</CustomField>