sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/recordTypes/KIVA_Interview.recordType-meta.xml
<RecordType>
    <fullName>KIVA_Interview</fullName>
    <active>true</active>
    <label>KIVA Interview</label>
</RecordType>