sfSandBoxCode/force-app/main/default/objects/KIVA_Interviews__c/listViews/Interviews_by_Account_name.listView-meta.xml
<ListView>
    <fullName>Interviews_by_Account_name</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Date_of_interview__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>Interviews by Account name</label>
    <language>en_US</language>
</ListView>